# projectHaskell

./: .gitignore  CHANGELOG.md  README.md  config.json  projectHaskell.cabal  sexp.hs
app/: Main.hs  Parser.hs
app/templates/: index.html
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: invalid2.sexpr  invalid3.sexpr  invalid4.sexpr  valid2.sexpr  valid3.sexpr  valid4.sexpr  valid5.sexpr
src/: Main.hs
