cabal-version:      2.4
name:               projectHaskell
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: parse an S-Expr to JSON 

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SINGER Jules
maintainer:         jules.singer@telecomnancy.eu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
     default-language: Haskell2010
     build-depends:    base ^>=4.17.0.0
                     , aeson
                     , bytestring
                     , containers
                     , extra
                     , generic-random
                     , http-conduit
                     , ilist
                     , megaparsec
                     , mtl
                     , random
                     , random-shuffle
                     , req
                     , process
                     , QuickCheck
                     , scotty
                     , text
                     , vector
                     , http-types
                     , network-uri
     ghc-options:      -Wall
                       -Wunticked-promoted-constructors
                       -Wno-name-shadowing
                       -Wno-unused-imports
                       -Werror
                       -Wwarn=missing-home-modules
     default-extensions: DataKinds
                         DeriveGeneric
                         DeriveFunctor
                         DuplicateRecordFields
                         FlexibleContexts
                         FlexibleInstances
                         MultiParamTypeClasses
                         NamedFieldPuns
                         LambdaCase
                         OverloadedRecordDot
                         OverloadedStrings
                         RecordWildCards
                         ScopedTypeVariables
                         TypeApplications

executable Main.hs
    import:           common-all
    main-is:          Main.hs
    hs-source-dirs:   app

    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:           common-all
    hs-source-dirs:   app
    exposed-modules:  Scratch